unpackaged/main/default/objects/Account/fields/Close_all_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Close_all_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close all Opportunity</label>
    <type>Checkbox</type>
</CustomField>