unpackaged/main/default/objects/Account/fields/contact_count__c.field-meta.xml
<CustomField>
    <fullName>contact_count__c</fullName>
    <label>contact count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>