unpackaged/main/default/objects/Account/fields/Contact_Emails__c.field-meta.xml
<CustomField>
    <fullName>Contact_Emails__c</fullName>
    <label>Contact Emails</label>
    <length>20</length>
    <type>Text</type>
</CustomField>