unpackaged/main/default/objects/Account/fields/Deadline_date__c.field-meta.xml
<CustomField>
    <fullName>Deadline_date__c</fullName>
    <label>Deadline date</label>
    <type>Date</type>
</CustomField>