unpackaged/main/default/objects/Account/fields/emailCount__c.field-meta.xml
<CustomField>
    <fullName>emailCount__c</fullName>
    <label>emailCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>