unpackaged/main/default/objects/Account/fields/First_close_date__c.field-meta.xml
<CustomField>
    <fullName>First_close_date__c</fullName>
    <label>First close date</label>
    <type>Date</type>
</CustomField>