unpackaged/main/default/objects/Account/fields/Last_Closed_Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_Case_Date__c</fullName>
    <label>Last Closed Case Date</label>
    <type>Date</type>
</CustomField>