unpackaged/main/default/objects/Account/fields/Last_Created_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Created_Opportunity_Date__c</fullName>
    <label>Last Created Opportunity Date</label>
    <type>DateTime</type>
</CustomField>