unpackaged/main/default/objects/Account/fields/Latest_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Close_Date__c</fullName>
    <label>Latest Close Date</label>
    <type>Date</type>
</CustomField>