unpackaged/main/default/objects/Account/fields/maxOpp__c.field-meta.xml
<CustomField>
    <fullName>maxOpp__c</fullName>
    <label>maxOpp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>