unpackaged/main/default/objects/Account/fields/No_Of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Opportunity__c</fullName>
    <label>No Of Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>