unpackaged/main/default/objects/Account/fields/Number_Of_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Cases__c</fullName>
    <label>Number of Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>