unpackaged/main/default/objects/Account/fields/phoneCount__c.field-meta.xml
<CustomField>
    <fullName>phoneCount__c</fullName>
    <label>phoneCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>