unpackaged/main/default/objects/Account/fields/Recently_Added__c.field-meta.xml
<CustomField>
    <fullName>Recently_Added__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recently Added</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>