unpackaged/main/default/objects/Account/fields/webCount__c.field-meta.xml
<CustomField>
    <fullName>webCount__c</fullName>
    <label>webCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>