unpackaged/main/default/objects/Account/fields/Working_in__c.field-meta.xml
<CustomField>
    <fullName>Working_in__c</fullName>
    <label>Working in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>