unpackaged/main/default/objects/Account/fields/Working_on__c.field-meta.xml
<CustomField>
    <fullName>Working_on__c</fullName>
    <label>Working on</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>