unpackaged/main/default/objects/Account/validationRules/Account_Number_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Numeric</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT(ISNUMBER(AccountNumber)),
 NOT(ISBLANK(AccountNumber)) 
)</errorConditionFormula>
    <errorMessage>Account Number must be Numeric if not blank</errorMessage>
</ValidationRule>