unpackaged/main/default/objects/Account/validationRules/Annual_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
 AnnualRevenue &lt; 0,
 AnnualRevenue &gt; 1000000000
)</errorConditionFormula>
    <errorMessage>Annual Revenue Must Be Between $0 To $1000000000</errorMessage>
</ValidationRule>