unpackaged/main/default/objects/Account/validationRules/Validate_Account_Digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Account_Digit</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(AccountNumber)  &lt;&gt; 7 , NOT(ISNULL(AccountNumber)))</errorConditionFormula>
    <errorMessage>Account Number should be exactly seven digits and should not be blank.</errorMessage>
</ValidationRule>