unpackaged/main/default/objects/Account/validationRules/Validation_Hours_6.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Hours_6</fullName>
    <active>false</active>
    <errorConditionFormula>Hours__c &lt; 0</errorConditionFormula>
    <errorMessage>Hours Worked must be a non-negative number.</errorMessage>
</ValidationRule>