unpackaged/main/default/objects/Account/validationRules/Validation_Marks_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Marks_4</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Marks__c &lt; 0 , MOD( Marks__c ,2) != 0)</errorConditionFormula>
    <errorMessage>Marks should not be non-negative even number.</errorMessage>
</ValidationRule>