unpackaged/main/default/objects/Account/validationRules/Validation_Marks_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Marks_5</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Marks__c &lt; 0 , MOD( Marks__c ,2) = 0)</errorConditionFormula>
    <errorMessage>Marks Should not be a non-negative odd number.</errorMessage>
</ValidationRule>