unpackaged/main/default/objects/Account/validationRules/validation_name_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_name_rule</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
     Name  = &quot;Mohit&quot;, 
    TRUE, 
    FALSE
)</errorConditionFormula>
    <errorMessage>Tha Name field canot be Mohit.</errorMessage>
</ValidationRule>