unpackaged/main/default/objects/Account/validationRules/Validation_Required_field_33.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Required_field_33</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Phone)</errorConditionFormula>
    <errorMessage>The Phone Field is mandatory.</errorMessage>
</ValidationRule>